--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "db-migrate-mysql": "^2.3.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.5.2"
