--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "cors": "^2.8.5",
     "db-migrate-mysql": "^2.3.2",
     "dotenv": "^16.3.1",
