--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@vis.gl/react-google-maps": "*",
+    "axios": "^1.6.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
