--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "db-migrate-mysql": "^2.3.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2"
   },
   "devDependencies": {
