--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.6.3",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
